<resources>
    <string name="app_name">About Me</string>
    <string name="name">Dominic Awatin</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Hi! I’m Dominic a college student majoring in Information Technology. I’m passionate about learning how technology connects people and makes life easier. Outside of classes, I love hanging out with friends, playing online games, and grabbing late-night coffee during study sessions. I’m always up for learning something new — whether it’s coding a small project, exploring new music, or trying out a random hobby just for fun.</string>
    <string name="bio2">Hi! I’m Casey Morales, a college student majoring in Information Technology. I’m passionate about learning how technology connects people and makes life easier. Outside of classes, I love hanging out with friends, playing online games, and grabbing late-night coffee during study sessions. /n/n/nI’m always up for learning something new — whether it’s coding a small project, exploring new music, or trying out a random hobby just for fun.</string>
    <string name="bio3">Hi! I’m Casey Morales, a college student majoring in Information Technology. /n/n/nI’m passionate about learning how technology connects people and makes life easier. Outside of classes, I love hanging out with friends, playing online games, and grabbing late-night coffee during study sessions. I’m always up for learning something new — whether it’s coding a small project, exploring new music, or trying out a random hobby just for fun.</string>
    <string name="menu_edit">Menu edit</string>
    <string name="what_nickname">What is your nickname?</string>
    <string name="done">Done</string>
    <string name="bio4">Hey! I’m Dominic, a college student currently majoring in Information Technology. I’ve always been fascinated by how technology shapes the way we live — from the apps we use every day to the systems that keep everything connected behind the scenes. I enjoy learning about coding, cybersecurity, and anything that challenges me to think creatively and solve problems.\n\nOutside of academics, I’m a pretty chill person. You’ll usually find me hanging out with friends, exploring new cafés, or binge-watching shows when I need a break from studying. I’m also into music, gaming, and photography — they’re my go-to outlets whenever I need to unwind.\n\nWhat drives me most is the idea of constantly improving myself. Whether it’s learning a new skill, working on a project, or stepping out of my comfort zone, I like taking on things that push me forward. College life can be stressful at times, but I’ve learned that balance and good company make the journey a lot more enjoyable.</string>
</resources>